--- a/01_BlackAndWhite/01_Diagonal/Line/js/Line/index.html
+++ b/01_BlackAndWhite/01_Diagonal/Line/js/Line/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-Line8796287265804914630.js"></script>
+  <script language="javascript" type="text/javascript" src="Line.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
